Refine report staging and search review UX